# cec-adapter

./: Cargo.toml  Embed.toml  README.md  memory.x
.cargo/: config.toml
src/: cec.rs  cec_types.rs  graphics.rs  lib.rs  main.rs
