[package]
name = "cec-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536c", features = ["defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536c", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536c", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = {git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536c", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = {  git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536c", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = {  git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536c", features = ["defmt"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536c" }
embassy-usb-logger = {  git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536c" }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.0"
#embedded-canvas = { path = "../embedded-canvas"}
ssd1306 = "0.8.0"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = {version = "0.7.16", features = ["defmt-impl"]}
ufmt = "0.2.0"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.10" }
embedded-hal-async = "0.2.0-alpha.1"
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "1.1", features = ["nightly"]}
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }

strum = {version="0.24.1", default-features = false}
strum_macros = "0.24"
num_enum = {version="0.5.7", default-features = false}

[profile.release]
#debug = true
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
#strip = true        #
