[package]
name = "cec-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.6.0",  features = ["defmt"] }
embassy-sync = { version = "0.8.0",  features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.1",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.6.0",  features = ["defmt"] }
embassy-usb-driver = { version = "0.2.0"  }
embassy-net = { version = "0.9.0", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
embassy-net-wiznet = { version = "0.3.0", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }
embassy-usb-logger = { version = "0.6.0" }
cyw43 = { version = "0.7.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.10.0", features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.1.0"
fixed = "1.31.0"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.2"
#embedded-canvas = { path = "../embedded-canvas"}
ssd1306 = {git = "https://github.com/rust-embedded-community/ssd1306.git"}
display-interface = "0.5.0"
byte-slice-cast = { version = "1.2.3", default-features = false }
smart-leds = "0.4.0"
heapless = {version = "0.9.2", features = ["defmt"] }
ufmt = "0.2.0"

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = { version = "0.7.1", features = [ "defmt"] }
embedded-storage = { version = "0.3" }
#static_cell = { version = "2.1.1", features = []}
log = "0.4"
pio-proc = "0.3.0"
pio = "0.3.0"
rand = { version = "0.10.0", default-features = false }

strum = {version="0.28.0", default-features = false}
strum_macros = "0.28.0"
num_enum = {version="0.7.6", default-features = false}

[profile.release]
#debug = true
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
#strip = true        #
